{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 13,
  "lineage": "84dbe4c9-5732-40e5-f281-cfc88046b53f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6d9d3d33ba97d99",
            "arn": "arn:aws:ec2:us-east-1:617072385944:instance/i-0b02f54f6dce16d9c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b02f54f6dce16d9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "newkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0127285f212d5bbd2"
              }
            ],
            "primary_network_interface_id": "eni-0127285f212d5bbd2",
            "private_dns": "ip-10-0-1-98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_ip": "34.232.105.10",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09bb7219edebe99d4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d59d96cafe7556e",
            "tags": {
              "name": "terraform-apache"
            },
            "tags_all": {
              "name": "terraform-apache"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb9cd2ce2694d940"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "617072385944",
            "id": "i-0b02f54f6dce16d9c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.apache_sg",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617072385944:internet-gateway/igw-09bfea52264db8269",
            "id": "igw-09bfea52264db8269",
            "owner_id": "617072385944",
            "region": "us-east-1",
            "tags": {
              "name": "terraform-igw"
            },
            "tags_all": {
              "name": "terraform-igw"
            },
            "vpc_id": "vpc-01f7a9cb9b4b96bb2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "617072385944",
            "id": "igw-09bfea52264db8269",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617072385944:route-table/rtb-027c5699353fa5b20",
            "id": "rtb-027c5699353fa5b20",
            "owner_id": "617072385944",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bfea52264db8269",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "terraform-rt"
            },
            "tags_all": {
              "name": "terraform-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f7a9cb9b4b96bb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "617072385944",
            "id": "rtb-027c5699353fa5b20",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0642608d567c78ebe",
            "region": "us-east-1",
            "route_table_id": "rtb-027c5699353fa5b20",
            "subnet_id": "subnet-02d59d96cafe7556e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "617072385944",
            "id": "rtbassoc-0642608d567c78ebe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617072385944:security-group/sg-0bb9cd2ce2694d940",
            "description": "allow http and ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb9cd2ce2694d940",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "apache_sg",
            "name_prefix": "",
            "owner_id": "617072385944",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "apache-sg"
            },
            "tags_all": {
              "name": "apache-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f7a9cb9b4b96bb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "617072385944",
            "id": "sg-0bb9cd2ce2694d940",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617072385944:subnet/subnet-02d59d96cafe7556e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d59d96cafe7556e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "617072385944",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "name": "terraform-subnet"
            },
            "tags_all": {
              "name": "terraform-subnet"
            },
            "vpc_id": "vpc-01f7a9cb9b4b96bb2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "617072385944",
            "id": "subnet-02d59d96cafe7556e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:617072385944:vpc/vpc-01f7a9cb9b4b96bb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d548279bb8d39b06",
            "default_route_table_id": "rtb-0059ebb34e136321e",
            "default_security_group_id": "sg-07e89de6849b33c00",
            "dhcp_options_id": "dopt-09ba326022a38e0de",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f7a9cb9b4b96bb2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0059ebb34e136321e",
            "owner_id": "617072385944",
            "region": "us-east-1",
            "tags": {
              "name": "terraform-vpc"
            },
            "tags_all": {
              "name": "terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "617072385944",
            "id": "vpc-01f7a9cb9b4b96bb2",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}